--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "winston": "^3.2.1"
+  },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.1",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
-  },
-  "dependencies": {
-    "log4js": "^6.2.1",
-    "winston": "^3.2.1"
   }
 }
