--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.1.0",
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.1",
+    "@types/node-fetch": "^2.5.7",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "ts-node": "^8.10.1",
